# chat

./: Cargo.toml  README.md
src/: cliente.rs  lib.rs  servidor.rs
src/red/: cliente.rs  estadocliente.rs  eventoconexion.rs  eventoservidor.rs  mod.rs  sala.rs  servidor.rs  util.rs
src/ui/: chat.glade  chat.glade~  dialog.glade  dialog_error.glade  dialog_error.glade~
tests/: pruebas_integracion.rs
