[package]
name = "chat"
version = "0.1.0"
authors = ["Adrián García <adrian.garcia04@ciencias.unam.mx>"]

[dependencies]
glib = "^0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]

[[bin]]
name = "servidor"
path = "src/servidor.rs"

[[bin]]
name = "cliente"
path = "src/cliente.rs"
