[package]
name = "chat"
version = "0.1.0"
authors = ["Adrián García <adrian.garcia04@ciencias.unam.mx>"]

[dependencies]
glib = "^0"
log = "0.4.5"
simplelog = "0.5.2"
clap = "2.32.0"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]

[[bin]]
name = "servidor"
path = "src/servidor.rs"

[[bin]]
name = "cliente"
path = "src/cliente.rs"
